# roll-value-showcase

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  artifacts.py  bot.py  builds.py  characters.py  compose.yaml  localization.py  main.py  profiles.py  pull_splash_art.py  pyproject.toml  redis_client.py  requirements.txt
.github/workflows/: test_github_actions.yml
artifacts/: artifacts.py  character_useful_substats.json
characters/: characters.json  characters.py
commands/: showcase.py
db/: __init__.py  db.py  tables.py
docs/: element_types.md
images/: box_highlight.py  draw_image.py
localization/: loc.json  localization.py
views/: showcase.py
