[project]
name = "rv-showcase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "playwright>=1.55.0",
    "py-cord>=2.6.1",
    "pymysql>=1.1.2",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "tabulate>=0.9.0",
]
